Bug 111703 - The last accessed tab is opened instead of the organizer tab when adding a new (page) style
Summary: The last accessed tab is opened instead of the organizer tab when adding a ne...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: lowest trivial
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
: 122600 (view as bug list)
Depends on:
Blocks: Writer-Styles
  Show dependency treegraph
 
Reported: 2017-08-11 19:23 UTC by Telesto
Modified: 2020-01-26 16:29 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-08-11 19:23:43 UTC
Description:
The last accessed tab and not the organizer tab isn't opened by default when adding a new page style

Steps to Reproduce:
1. Open Writer
2. Format -> Page -> Select Area tab and press OK
3. Styles sidebar -> Page button 
4. Add a new style -> Right Click -> New
5. There Area Tab will be open not the organizer tab. 

Actual Results:  
The last accessed tab is opened by default

Expected Results:
When creating a new style the the organizer tab should be opened -> The first steps should be setting a Name (it's probably also more consistent) 


Reproducible: Always

User Profile Reset: No

Additional Info:
Version: 6.0.0.0.alpha0+
Build ID: 46b4eb8b0e9325f8c29cd391baf9504bccee1837
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-08-11_06:44:17
Locale: nl-NL (nl_NL); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Buovjaga 2017-08-30 12:14:49 UTC
Yep.

Seems pretty random otherwise: doing the same steps for paragraph opens the Font tab..

Arch Linux 64-bit, KDE Plasma 5
Version: 6.0.0.0.alpha0+
Build ID: 507247697dc6c4a41fe17a29d522511f97040738
CPU threads: 8; OS: Linux 4.12; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on August 29th 2017
Comment 2 Yousuf Philips (jay) (retired) 2017-08-31 10:31:38 UTC
This is a common problem with opening any dialog, that it opens the last used tab of the previous time it was open, and doubt anything can be done about this.

@Maxim, @Samuel, @Bubli: Any thoughts about forcing a tab of a dialog to appear when it launches?
Comment 3 QA Administrators 2018-09-01 02:41:23 UTC Comment hidden (obsolete, spam)
Comment 4 Jim Raykowski 2019-07-29 02:24:57 UTC
Hi All, I have been poking around style related bugs and came across this request when making a new bug report concerning the Organizer tab page in the Paragraph Style dialog. Here is a patch that selects the Organizer tab page when adding a new style.

https://gerrit.libreoffice.org/#/c/76508/
Comment 5 Commit Notification 2019-07-29 06:03:37 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/08328925e3406ad91b953d368483a6a5587c07c2%5E%21

tdf#111703 Select the Organizer tab page when new style

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2020-01-26 16:29:22 UTC
*** Bug 122600 has been marked as a duplicate of this bug. ***