tdf#111703 Select the Organizer tab page when new style

Change-Id: Ib031bd1139ea9a8bf084a1ead17bc17f30565401
Reviewed-on: https://gerrit.libreoffice.org/76508
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>